# solo-6dof-motion-platform

./: .gitignore  LICENSE.md  README.md
docs/: calibration_and_usage.md  hardware_framework.md  program_execution.md  setup_and_notes.md  setup_and_usage.md  software_framework.md
resources/CAD/base/: fixture_plate_main_for_Printing_1.SLDPRT  fixture_plate_main_for_Printing_2.SLDPRT  fixture_plate_robot_2022-05-10.SLDPRT  mechanical_hardstop_2022-08-04.SLDPRT
resources/CAD/calibration_tools/: Body1.SLDPRT  (+7 more)
resources/URDF/URDF_motion_simulator_simplified_dummy/: package.xml
resources/URDF/URDF_motion_simulator_simplified_dummy/config/: joint_names_URDF_motion_simulator_simplified_dummy.yaml
resources/URDF/URDF_motion_simulator_simplified_dummy/launch/: display.launch  gazebo.launch
resources/URDF/URDF_motion_simulator_simplified_dummy/meshes/: dummy_left_front.STL  dummy_right_front.STL  hip_left_back.STL  hip_left_front.STL  hip_right_back.STL  lower_leg_left_front.STL  lower_leg_right_back.STL  upper_leg_right_back.STL  upper_leg_right_front.STL
src/: config.py  free_solo_program.py  pybullet_program.py  solo_program.py  start_program.py  start_program.sh
src/control/: free_solo_ctrl.py  pybullet_ctrl.py  solo_ctrl.py
src/inverse_kinematics/: analytic_IK.py  pybullet_IK.py  robotics_toolbox_IK.py
src/platform_trajectory_generation/: generate_arbitrary_trajectory.py  generate_circular_trajectory.py  generate_sine_trajectory.py  generate_step_trajectory.py
src/post_processing/: data_preview.py  data_processing.py  update_data.py
(+35 files in other folders)
